codex-rs/core/tests/suite/snapshots/all__suite__compact_remote__remote_resume_after_same_turn_realtime_end_uses_latest_turn_context_item_shapes.snap
---
source: core/tests/suite/compact_remote.rs
assertion_line: 2369
expression: "format_labeled_requests_snapshot_with_normalized_exec_output(\"A same-turn realtime-ended update is recorded before the turn completes. On resume, replay should use the later inactive TurnContext snapshot from that same turn and preserve that historical ended message exactly once instead of emitting a duplicate update.\",\n&[(\"Same-Turn Continuation After Realtime Close\", second_request),\n(\"Remote Post-Resume History Layout\", after_resume_request),])"
---
Scenario: A same-turn realtime-ended update is recorded before the turn completes. On resume, replay should use the later inactive TurnContext snapshot from that same turn and preserve that historical ended message exactly once instead of emitting a duplicate update.

## Same-Turn Continuation After Realtime Close
00:message/developer[2]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <realtime_conversation>\nRealtime conversation started.\n\nYou a...
01:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:USER_ONE
03:function_call/exec_command
04:function_call_output:<UNIFIED_EXEC_OUTPUT>
05:message/developer:<realtime_conversation>\nRealtime conversation ended.\n\nSubsequ...

## Remote Post-Resume History Layout
00:message/developer[2]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <realtime_conversation>\nRealtime conversation started.\n\nYou a...
01:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:USER_ONE
03:function_call/exec_command
04:function_call_output:<UNIFIED_EXEC_OUTPUT>
05:message/developer:<realtime_conversation>\nRealtime conversation ended.\n\nSubsequ...
06:message/assistant:REMOTE_MID_TURN_REALTIME_ENDED_REPLY
07:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
08:message/user:USER_TWO
